--- a/Leo.html
+++ b/Leo.html
@@ -9,8 +9,7 @@
       <img src="LuLu0.jpg" ><br><br>
       <P>고양이들은 야성적이고도 매력적인 외모에도 불구하고 나에게는 낯선 존재였다.
          그러나 언젠가부터 그들의 행동의 이유에 대해 알게되면서 이해하게 되고 낯설거나 두려움은 서서히 가시게 되었다.<br>
-         그렇게 된 사정은 딸이 대학교에 가면서부터이다. 모든게 새로웠던 대학생활에서 딸은 학생들이 누구나 귀여워하던 레오라는 고양이를
-         무척이나 좋아하게 되면서 나에게 레오에 대한 이야기를 들려주었다. <br> 사람들을 겁내하지 않고 아무데서나 자거나 자기를 만지게 놔두거나 하는 레오는 학교의 킹답게
+         <br> 서강대의 레로는 학교의 마스코트답게 사람들을 겁내하지 않고 아무데서나 자거나 자기를 만지게 놔두거나 하는 레오는 학교의 킹답게
          학생들의 귀여움을 독차지 하였다.<br> 고양이를 이해하게 된 또하나의 결정적인 이유는 크림히어로즈를 보게되면서다.<br> 거기에는 각각의 개성을 지닌 일곱마리의 고양이와 그들의 집사가
          등장해서 여러가지 재미있는 에피소드들이 펼쳐지는데 이 아이들이 마치 내가 키우는 것 같은 착각을 불러일으킨다.
 https://blog.naver.com/kangny4730/221103356048
